# music-desktop

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.tsx  api.ts  index.css  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_log.rs  app_password.rs  audio.rs  audio_convert.rs  autostart.rs  backup.rs  db.rs  emergency_alerts.rs  holiday_service.rs  lib.rs  main.rs  maintenance.rs  message_storage.rs  music_player.rs  music_schedule.rs  music_storage.rs  operational_day.rs  oref_cities.rs  oref_monitor.rs  os_volume.rs  overview.rs  password_vault.rs  scheduler.rs  system_activity.rs  system_message_schedule.rs
src/components/: AddHolidayDialog.tsx  AddMusicDialog.tsx  AddSystemMessageDialog.tsx  AppPasswordGate.tsx  DatePickerDialog.tsx  DeleteHolidayConfirmDialog.tsx  DeleteMusicConfirmDialog.tsx  DeleteSystemMessageConfirmDialog.tsx  EditSystemMessageDialog.tsx  EmergencyAlertStack.tsx  EmergencyMessagesPage.tsx  HolidayKindIcon.tsx  HolidayStatusDialog.tsx  HolidaysPage.tsx  MusicPage.tsx  OverviewPage.tsx  SchedulesPage.tsx  SettingsAuthProvider.tsx  SettingsPage.tsx  SystemActivityDisableDialog.tsx  SystemActivityProvider.tsx  SystemMessagesPage.tsx  VocalOnlyWarningDialog.tsx
src/lib/: audioFilters.ts  dayBeforeErev.ts  emergencyAlertTypes.ts  errors.ts  hebrewCalendar.ts  hebrewDate.ts  hebrewHolidays.ts  holidays.ts  israelClock.ts  jerusalemDate.ts  musicFolders.ts  operatingHours.ts  operationalDay.ts  (+3 more)
(+20 files in other folders)
