[package]
name = "nusic"
version = "0.1.0"
description = "מערכת הודעות חכמה"
authors = ["you"]
edition = "2021"

[lib]
name = "nusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
ffmpeg-sidecar = "2.5"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rodio = "0.20"
tokio = { version = "1", features = ["time", "rt"] }
chrono = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
ffmpeg-sidecar = "2.5"
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
rand = "0.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
windows = { version = "0.58", features = [
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_UI_Shell_PropertiesSystem",
] }
